--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "rpi-gpio": "^2.1.3"
+    "@types/readline-sync": "^1.4.3",
+    "@types/rpio": "0.0.2",
+    "readline-sync": "^1.4.9"
   }
 }
