--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@types/readline-sync": "^1.4.3",
     "@types/rpio": "0.0.2",
+    "promise-readable": "^5.0.4",
+    "promise-socket": "^6.0.3",
     "readline-sync": "^1.4.9",
     "rpio": "^1.0.13"
   },
@@ -12,6 +14,7 @@
   },
   "scripts": {
     "build:watch": "tsc --watch",
+    "console": "ts-node console.ts",
     "sync": "ts-node syncr.ts",
     "jserver": "java -cp jserver/target/classes/:jserver/jars/* zpin.JServer"
   }
