--- a/package.json
+++ b/package.json
@@ -8,14 +8,25 @@
     "rpio": "^1.0.13"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.9",
+    "@types/mocha": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "mocha": "^7.0.1",
     "scp2": "^0.5.0",
-    "ts-node": "^8.3.0",
+    "ts-mocha": "^6.0.0",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "build:watch": "tsc --watch",
     "console": "ts-node console.ts",
     "sync": "ts-node syncr.ts",
-    "jserver": "java -cp jserver/target/classes/:jserver/jars/* zpin.JServer"
+    "jserver": "java -cp jserver/target/classes/:jserver/jars/* zpin.JServer",
+    "test": "ts-mocha **/*.spec.ts",
+    "lint": "eslint **/*.ts",
+    "lint:fix": "eslint **/*.ts --fix"
   }
 }
