--- a/package.json
+++ b/package.json
@@ -8,24 +8,23 @@
     "rpio": "^1.0.13"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.9",
-    "@types/mocha": "^7.0.1",
+    "@types/jest": "^24.0.23",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
-    "chai": "^4.2.0",
     "eslint": "^6.8.0",
-    "mocha": "^7.0.1",
     "scp2": "^0.5.0",
-    "ts-mocha": "^6.0.0",
+    "jest": "^24.9.0",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "ts-jest": "^24.2.0"
   },
   "scripts": {
     "build:watch": "tsc --watch",
     "console": "ts-node console.ts",
     "sync": "ts-node syncr.ts",
     "jserver": "java -cp jserver/target/classes/:jserver/jars/* zpin.JServer",
-    "test": "ts-mocha **/*.spec.ts",
+    "test": "jest --watchAll --coverage=false --maxWorkers=1",
+    "test:cov": "jest --watchAll --coverage --maxWorkers=1",
     "lint": "eslint **/*.ts",
     "lint:fix": "eslint **/*.ts --fix"
   }
