--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "dependencies": {
-    "@types/readline-sync": "^1.4.3",
     "@types/rpio": "0.0.2",
     "promise-readable": "^5.0.4",
     "promise-socket": "^6.0.3",
-    "readline-sync": "^1.4.9",
+    "readline": "^1.3.0",
     "rpio": "^1.0.13",
     "yargs": "^15.1.0"
   },
