--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "promise-socket": "^6.0.3",
     "readline": "^1.3.0",
     "rpio": "^1.0.13",
+    "truncate-logs": "^1.0.4",
     "yargs": "^15.1.0"
   },
   "devDependencies": {
