--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/rpio": "0.0.2",
+    "aminogfx-gl": "file:../aminogfx-gl",
     "promise-readable": "^5.0.4",
     "promise-socket": "^6.0.3",
     "readline": "^1.3.0",
