--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "eslint": "^6.8.0",
+    "jest": "^25.3.0",
     "scp2": "^0.5.0",
-    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5",
-    "ts-jest": "^24.2.0"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "build": "tsc",
