--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "@types/rpio": "0.0.2",
+    "@types/seedrandom": "^2.4.28",
     "aminogfx-gl": "file:../aminogfx-gl",
     "promise-readable": "^5.0.4",
     "promise-socket": "^6.0.3",
     "readline": "^1.3.0",
+    "seedrandom": "^3.0.5",
     "truncate-logs": "^1.0.4",
     "yargs": "^15.4.1"
   },
