--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,19 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Remote",
+            "address": "localhost",
+            "port": 7000,
+            "localRoot": "${workspaceFolder}",
+            "sourceMaps": true,
+            "remoteRoot": "/home/pi/zpin",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
 		{
 			"type": "java",
 			"name": "CodeLens (Launch) - App",
