--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
 		"**/.settings": true,
 		"**/.factorypath": true
 	},
-	"files.eol": "\n"
+	"files.eol": "\n",
+	"typescript.tsdk": "node_modules\\typescript\\lib"
 }
