--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "scp2": "^0.5.0",
     "ts-jest": "^26.1.4",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "typescript": "4.0.3"
   },
   "scripts": {
     "build": "tsc",
