--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -64,12 +64,12 @@
 			"sourceMaps": true,
 			"args": [
                 "zpin/",
-                "--no-mpu",
+                // "--no-mpu",
                 // "--no-trace",
                 // "--no-gfx",
-				"--ip",
+				// "--ip",
 				// "--split",
-				"192.168.2.41",
+				// "192.168.2.41",
 				// "--recording","recordings/straightMbStarting.rec",
 				// "--recording","recordings/lightStraight.rec",
 				// "--recording","recordings/2ndWinReady.rec",
