build multiple cdisp tests

--- a/cdisp/Makefile
+++ b/cdisp/Makefile
@@ -5,17 +5,19 @@
 #DIR_OBJ = ./obj
 DIR_HW = ./HW
 DIR_BIN = ./bin
+DIR_LIB = ./lib
 
-OBJ_C = $(wildcard ${DIR_HW}/*.cpp ./*.cpp)
+OBJ_C = $(wildcard ${DIR_HW}/*.cpp ${DIR_LIB}/*.cpp)
 OBJ_O = $(patsubst %.cpp,${DIR_BIN}/%.o,$(notdir ${OBJ_C}))
 
-TARGET = test_7735
 #BIN_TARGET = ${DIR_BIN}/${TARGET}
 
 CC = g++
 
 DEBUG = -g -O3 -Wall
 CFLAGS += $(DEBUG)
+
+TARGET = $(patsubst %.cpp,%,$(wildcard ./*.cpp))
 
 # USELIB = USE_BCM2835_LIB
 # USELIB = USE_WIRINGPI_LIB
@@ -28,16 +30,24 @@ else ifeq ($(USELIB), USE_WIRINGPI_LIB)
     LIB = -lwiringPi -lm 
 endif
 
+all: ${TARGET}
 
-${TARGET}: ${OBJ_O}
-	$(CC) $(CFLAGS) $(OBJ_O) -o $@ $(LIB) 
+${TARGET}: ${OBJ_O} $(patsubst %.cpp,${DIR_BIN}/%.o,$(wildcard ./*.cpp))
+	$(CC) $(CFLAGS) $(OBJ_O) ${DIR_BIN}/$@.o -o $@ $(LIB) 
 
 ${DIR_BIN}/%.o: $(DIR_HW)/%.cpp 
 	$(CC) $(CFLAGS) -c  $< -o $@ $(LIB) 
 
-${DIR_BIN}/%.o: %.cpp
+${DIR_BIN}/%.o: $(DIR_LIB)/%.cpp 
+	$(CC) $(CFLAGS) -c  $< -o $@ $(LIB) 
+
+${DIR_BIN}/%.o: ./%.cpp
 	$(CC) $(CFLAGS) -c  $< -o $@ $(LIB) 
 
 clean :
 	rm -fv $(DIR_BIN)/*.* 
 	rm -fv $(TARGET)
+
+debug:
+	echo ${OBJ_C}
+	echo ${OBJ_O}
